[gd_scene load_steps=8 format=3 uid="uid://bridge_game_001"]

[ext_resource type="PackedScene" uid="uid://bridge_player_001" path="res://scenes/BridgePlayer.tscn" id="1_player"]
[ext_resource type="Script" path="res://scripts/BridgeGameUI.gd" id="2_ui"]
[ext_resource type="Script" path="res://scripts/BridgeGame.gd" id="3_game"]
[ext_resource type="Script" path="res://scripts/ObstacleSpawner.gd" id="4_spawner"]
[ext_resource type="AudioStream" uid="uid://cfgchbs7flen5" path="res://music/lose_music.mp3" id="5_lose"]
[ext_resource type="FontFile" uid="uid://cbwnpfuof7ck0" path="res://fonts/m5x7.ttf" id="6_iwbf0"]
[ext_resource type="Texture2D" path="res://pictures/bridge_water.png" id="7_bridge_water"]

[node name="BridgeGame" type="Node2D"]
script = ExtResource("3_game")

[node name="Background" type="TextureRect" parent="."]
z_index = -10
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
texture = ExtResource("7_bridge_water")
expand_mode = 1
stretch_mode = 6

[node name="Bridge" type="ColorRect" parent="."]
z_index = -5
offset_left = -300.0
offset_top = -100.0
offset_right = 320.0
offset_bottom = 100.0
color = Color(0.55, 0.35, 0.2, 1)

[node name="BridgeTopEdge" type="ColorRect" parent="."]
z_index = -4
offset_left = -300.0
offset_top = -100.0
offset_right = 320.0
offset_bottom = -80.0
color = Color(0.4, 0.25, 0.15, 1)

[node name="BridgeBottomEdge" type="ColorRect" parent="."]
z_index = -4
offset_left = -300.0
offset_top = 80.0
offset_right = 320.0
offset_bottom = 100.0
color = Color(0.4, 0.25, 0.15, 1)

[node name="StartZone" type="ColorRect" parent="."]
z_index = -3
offset_left = -300.0
offset_top = -80.0
offset_right = -260.0
offset_bottom = 80.0
color = Color(0.3, 0.6, 0.3, 1)

[node name="EndZone" type="ColorRect" parent="."]
z_index = -3
offset_left = 260.0
offset_top = -80.0
offset_right = 320.0
offset_bottom = 80.0
color = Color(0.3, 0.6, 0.3, 1)

[node name="ObstacleSpawner" type="Node2D" parent="."]
script = ExtResource("4_spawner")

[node name="Player" parent="." instance=ExtResource("1_player")]
z_index = 5
position = Vector2(-270, 0)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.9, 0.9)

[node name="LoseMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_lose")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("2_ui")

[node name="UI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="InstructionsLabel" type="Label" parent="UI/UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 20.0
offset_right = 250.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_iwbf0")
theme_override_font_sizes/font_size = 28
text = "Use WASD to cross the bridge! Avoid the obstacles!"
horizontal_alignment = 1

[node name="SettingsButton" type="Button" parent="UI/UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("6_iwbf0")
theme_override_font_sizes/font_size = 22
text = "Settings"

[node name="GameOverPanel" type="Panel" parent="UI/UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="UI/UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -80.0
offset_right = 180.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_iwbf0")
theme_override_font_sizes/font_size = 26
text = "Game Over!
You hit an obstacle!
Press R to Restart"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinPanel" type="Panel" parent="UI/UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="WinLabel" type="Label" parent="UI/UI/WinPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -80.0
offset_right = 180.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_iwbf0")
theme_override_font_sizes/font_size = 26
text = "You Made It!
You crossed the bridge!
Press R to Continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsPanel" type="Panel" parent="UI/UI"]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsContainer" type="VBoxContainer" parent="UI/UI/SettingsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="SettingsLabel" type="Label" parent="UI/UI/SettingsPanel/SettingsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_iwbf0")
theme_override_font_sizes/font_size = 40
text = "Paused - Settings"
horizontal_alignment = 1

[node name="MasterVolume" type="VBoxContainer" parent="UI/UI/SettingsPanel/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="UI/UI/SettingsPanel/SettingsContainer/MasterVolume"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_iwbf0")
theme_override_font_sizes/font_size = 22
text = "Master Volume"

[node name="Slider" type="HSlider" parent="UI/UI/SettingsPanel/SettingsContainer/MasterVolume"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="MusicVolume" type="VBoxContainer" parent="UI/UI/SettingsPanel/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="UI/UI/SettingsPanel/SettingsContainer/MusicVolume"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_iwbf0")
theme_override_font_sizes/font_size = 22
text = "Music Volume"

[node name="Slider" type="HSlider" parent="UI/UI/SettingsPanel/SettingsContainer/MusicVolume"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="SFXVolume" type="VBoxContainer" parent="UI/UI/SettingsPanel/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="UI/UI/SettingsPanel/SettingsContainer/SFXVolume"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_iwbf0")
theme_override_font_sizes/font_size = 22
text = "Game Elements Volume"

[node name="Slider" type="HSlider" parent="UI/UI/SettingsPanel/SettingsContainer/SFXVolume"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="UIVolume" type="VBoxContainer" parent="UI/UI/SettingsPanel/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="UI/UI/SettingsPanel/SettingsContainer/UIVolume"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_iwbf0")
theme_override_font_sizes/font_size = 22
text = "UI Volume"

[node name="Slider" type="HSlider" parent="UI/UI/SettingsPanel/SettingsContainer/UIVolume"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="ButtonContainer" type="HBoxContainer" parent="UI/UI/SettingsPanel/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResumeButton" type="Button" parent="UI/UI/SettingsPanel/SettingsContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("6_iwbf0")
theme_override_font_sizes/font_size = 24
text = "Resume"

[node name="MainMenuButton" type="Button" parent="UI/UI/SettingsPanel/SettingsContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("6_iwbf0")
theme_override_font_sizes/font_size = 24
text = "Main Menu"
